--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ google-api-python-client==2.0.2
 google-auth==1.27.1
 google-auth-httplib2==0.1.0
 googleapis-common-protos==1.53.0
+gunicorn==20.0.4
 httplib2==0.19.0
 idna==2.10
 itsdangerous==1.1.0
