--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 art==5.1
+autopep8==1.5.5
 beautifulsoup4==4.9.3
+bleach==3.3.0
 cachetools==4.2.1
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
+colorama==0.4.4
+docutils==0.16
 Flask==1.1.2
 google-api-core==1.26.1
 google-api-python-client==2.0.2
@@ -13,27 +17,42 @@ googleapis-common-protos==1.53.0
 gunicorn==20.0.4
 httplib2==0.19.0
 idna==2.10
+importlib-metadata==3.7.2
 itsdangerous==1.1.0
 Jinja2==2.11.3
+keyring==23.0.0
 lxml==4.6.2
 lyrics-extractor==3.0.1
 MarkupSafe==1.1.1
 packaging==20.9
+pkg-upload==0.0.1
+pkginfo==1.7.0
 praw==7.2.0
 prawcore==2.0.0
 protobuf==3.15.5
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.6.0
+Pygments==2.8.1
 pyparsing==2.4.7
 pytz==2021.1
+pywin32-ctypes==0.2.0
 PyYAML==5.4.1
+readme-renderer==29.0
 requests==2.25.1
+requests-toolbelt==0.9.1
+rfc3986==1.4.0
 rsa==4.7.2
 six==1.15.0
 soupsieve==2.2
+toml==0.10.2
+tqdm==4.59.0
+twine==3.3.0
 update-checker==0.18.0
 uritemplate==3.0.1
 urllib3==1.26.3
 wandbox-api==0.9.19
+webencodings==0.5.1
 websocket-client==0.58.0
 Werkzeug==1.0.1
+zipp==3.4.1
